--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             position: absolute;
             top: 0;
             left: 0;
-            background-image: url('atuaizadocapa.png'); /* A imagem de cobertura */
+            background-image: url('atualizadocapa.png'); /* A imagem de cobertura */
             background-size: cover;
         }
 
